--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-.DS_STORE
-.vagrant
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+/.idea
+/.vagrant
+Homestead.json
+Homestead.yaml
+npm-debug.log
+.env
